# lms-system

./: .gitignore  Dockerfile.dev  alembic.ini  app.py  backend_func.py  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1140798bf6e8_init.py  1836c8f82caf_create_course_table.py  2825ee42cc50_.py  7b3dfcdae445_.py  86b98e062d4f_create_course_table.py
frontend/: app.py  login.py  register.py
lms/: auth.py  course.proto  course_pb2.py  database.py  main.py  models.py
lms/backend/: course.py  students.py
