[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["Abdul Moiz Lakhani <lakhaniabdulmoiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
sqlmodel = "^0.0.18"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
